<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@android:id/tabhost">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <HorizontalScrollView
            android:scrollbars="none"
            android:overScrollMode="never"
            android:fillViewport="true"
            android:fadingEdgeLength="12dp"
            android:requiresFadingEdge="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        </HorizontalScrollView>
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/var"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:ellipsize="start"
                    android:bufferType="editable"
                    android:textAppearance="?android:textAppearanceListItemSmall"
                    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                    android:id="@+id/var_path"/-->
                <ListView
                    android:id="@+id/var_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@android:id/text1"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:layout_height="match_parent"
                    android:text="@string/no_var"
                    android:gravity="center"
                    android:layout_width="match_parent"/>
            </LinearLayout>
            <FrameLayout
                android:id="@+id/frame"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <ListView
                android:id="@+id/frame_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@android:id/text2"
                android:minHeight="?android:attr/listPreferredItemHeightSmall"
                android:textAppearance="?android:attr/textAppearanceListItemSmall"
                android:layout_height="match_parent"
                android:text="@string/no_frame"
                android:gravity="center"
                android:layout_width="match_parent"/>
            </FrameLayout>
            <LinearLayout
                android:id="@+id/dbg_console"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="56dp"
                    android:maxHeight="260dp">
                <TextView
                    android:id="@+id/dbg_cmsg"
                    android:textIsSelectable="true"
                    android:bufferType="editable"
                    android:breakStrategy="simple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                </ScrollView>
                <EditText
                    android:id="@+id/dbg_cmd"
                    android:hint="@string/gdb_cmd"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:imeOptions="actionSend"/>
            </LinearLayout>
            <ListView
                android:id="@+id/bkpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ScrollView
                android:id="@+id/tab4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
            <TextView
                android:id="@+id/dbg_msg"
                android:textIsSelectable="true"
                android:bufferType="editable"
                android:breakStrategy="simple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</TabHost>
